--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@angular/platform-server": "^17.2.1",
     "@angular/router": "^17.2.1",
     "@angular/ssr": "^17.2.0",
+    "@apollo/client": "^3.9.5",
+    "apollo-angular": "^6.0.0",
     "express": "^4.18.2",
+    "graphql": "^16.8.1",
     "rxjs": "~7.8.1",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
